--- a/fastlane/metadata/ios/pt-BR/release_notes.txt
+++ b/fastlane/metadata/ios/pt-BR/release_notes.txt
@@ -1,4 +1,4 @@
-Verschiedene Änderungen und Verbesserungen.
+Diversas mudanças e melhorias.
 
 • New translation: Catalan/Català (by Eduard Ereza Martínez / @Ereza).
 • New translation: Portuguese (Brazilian)/Português brasileiro (by Tekhnikal).
